--- a/res/layout/activity_char_erstellung.xml
+++ b/res/layout/activity_char_erstellung.xml
@@ -3,10 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#FFF"
     tools:context="de.plathe.CharErstellung" >
 
     <EditText
@@ -14,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
         android:singleLine="true"
         android:layout_marginBottom="10dp"
         android:hint="Charactername" />
