--- a/res/layout/activity_start_screen.xml
+++ b/res/layout/activity_start_screen.xml
@@ -1,11 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:background="#FFF"
     tools:context="de.plathe.StartScreen" >
     
     <Button 
@@ -13,6 +11,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Neuen Char erstellen"
-        android:layout_centerHorizontal="true"/>
+        android:layout_gravity="center_horizontal"/>
+    
+    <LinearLayout
+        android:id="@+id/charFrame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" ></LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
