Char Details + Animation

--- a/res/layout/activity_char_erstellung.xml
+++ b/res/layout/activity_char_erstellung.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#FFF"
-    tools:context="de.plathe.CharErstellung" >
+    tools:context="de.henze.CharErstellung" >
 
     <EditText
         android:id="@+id/nameField"
