--- a/res/layout/activity_start_screen.xml
+++ b/res/layout/activity_start_screen.xml
@@ -1,22 +1,30 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#FFF"
-    tools:context="de.plathe.StartScreen" >
-    
-    <Button 
-        android:id="@+id/createNewChar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Neuen Char erstellen"
-        android:layout_gravity="center_horizontal"/>
-    
-    <LinearLayout
-        android:id="@+id/charFrame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" ></LinearLayout>
+        android:background="#FFF" >
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFF"
+        android:orientation="vertical"
+        tools:context="de.henze.StartScreen" >
+
+        <Button
+            android:id="@+id/createNewChar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Neuen Char erstellen" />
+
+        <LinearLayout
+            android:id="@+id/charFrame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:orientation="vertical" >
+        </LinearLayout>
+    </LinearLayout>
+
+</ScrollView>
