--- a/res/layout/character.xml
+++ b/res/layout/character.xml
@@ -1,22 +1,36 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp"
-    android:background="@drawable/border" >
-    
-    <ImageView 
-        android:id="@+id/charIcon"
-        android:layout_height="48dp"
-        android:layout_width="48dp"
-        android:layout_gravity="center_horizontal"
-        android:contentDescription="Char Icon" />
-    
-    <TextView 
-        android:id="@+id/charName" 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:textColor="#000" />   
-    
-</LinearLayout>
+        android:background="@drawable/border"
+        android:orientation="vertical"
+        android:padding="10dp" >
+
+        <ImageView
+            android:id="@+id/charIcon"         
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center_horizontal"
+            android:contentDescription="Char Icon" />
+
+        <TextView
+            android:id="@+id/charName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#000" />
+
+        <LinearLayout
+            android:id="@+id/charDetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:orientation="vertical" >
+        </LinearLayout>
+    </LinearLayout>
+
+</ScrollView>
