--- a/res/layout/activity_char_erstellung.xml
+++ b/res/layout/activity_char_erstellung.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#FFF"
+    android:orientation="vertical"
     tools:context="de.henze.CharErstellung" >
 
     <EditText
@@ -11,10 +11,43 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:singleLine="true"
         android:layout_marginBottom="10dp"
-        android:hint="Charactername" />
+        android:gravity="center_horizontal"
+        android:hint="Charactername"
+        android:inputType="textCapSentences"
+        android:singleLine="true" />
+
+    <LinearLayout
+        android:id="@+id/rassen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/rasse1"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginRight="5dp"
+            android:contentDescription="@string/reroll_button"
+            android:src="@drawable/dice" />
+
+        <ImageView
+            android:id="@+id/rasse2"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginRight="5dp"
+            android:contentDescription="@string/reroll_button"
+            android:src="@drawable/dice" />
+
+        <ImageView
+            android:id="@+id/rasse3"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:contentDescription="@string/reroll_button"
+            android:src="@drawable/dice" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/klassen"
@@ -28,16 +61,16 @@
             android:id="@+id/klasse1"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:contentDescription="@string/reroll_button"
             android:layout_marginRight="5dp"
+            android:contentDescription="@string/reroll_button"
             android:src="@drawable/dice" />
 
         <ImageView
             android:id="@+id/klasse2"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:contentDescription="@string/reroll_button"
             android:layout_marginRight="5dp"
+            android:contentDescription="@string/reroll_button"
             android:src="@drawable/dice" />
 
         <ImageView
@@ -59,8 +92,8 @@
             android:id="@+id/male"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:contentDescription="@string/reroll_button"
             android:layout_marginRight="5dp"
+            android:contentDescription="@string/reroll_button"
             android:src="@drawable/male" />
 
         <ImageView
@@ -70,12 +103,12 @@
             android:contentDescription="@string/reroll_button"
             android:src="@drawable/female" />
     </LinearLayout>
-    
-    <Button 
+
+    <Button
         android:id="@+id/createChar"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="Weiter"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:text="Weiter" />
 
 </LinearLayout>
